Fix inline defininition list alignment

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -139,14 +139,9 @@ dl.short dd {
     color: #ccc;
 }
 
-dl.short dt, dl.short dd {
-    display: inline;
+dl.short dt {
     float: left;
     margin: 0 0.5em 0 0;
-}
-
-dl.short dd + dt, dl.short dd + dd {
-    clear: left;
 }
 
 dt {
